--- a/Modulo2/1. Estructuras de Control Iterativas.ipynb
+++ b/Modulo2/1. Estructuras de Control Iterativas.ipynb
@@ -60,30 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Informes del Año 2001\n",
-      "Informes del Año 2002\n",
-      "Informes del Año 2003\n",
-      "Informes del Año 2004\n",
-      "Para el anio 2005 no se generan informes\n",
-      "Para el anio 2006 no se generan informes\n",
-      "Informes del Año 2007\n",
-      "Informes del Año 2008\n",
-      "Informes del Año 2009\n",
-      "Informes del Año 2010\n",
-      "Estamos en el 2010\n",
-      "FInalizando el programa\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "anio = 2001\n",
     "while anio <= 2012:\n",
@@ -94,8 +75,7 @@
     "        pass # no hacemos nada\n",
     "\n",
     "    if anio in [2005, 2006]:\n",
-    "        print('Para el anio {} no se generan informes'.format(anio))\n",
-    "        anio += 1\n",
+    "        anio += 1 # incrementamos anio en 1\n",
     "        continue\n",
     "\n",
     "    print(\"Informes del Año {}\".format(anio))\n",
@@ -141,11 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c vale  0\n",
+      "c vale  1\n",
+      "c vale  2\n",
+      "c vale  3\n",
+      "c vale  4\n",
+      "Rompemos el bucle cuando c vale  4\n"
+     ]
+    }
+   ],
    "source": [
     "c = 0\n",
     "while c <= 5:\n",
@@ -175,9 +168,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c vale 1\n",
+      "c vale 2\n",
+      "Continuamos con la siguiente iteración 3\n",
+      "Continuamos con la siguiente iteración 4\n",
+      "c vale 5\n",
+      "c vale 6\n"
+     ]
+    }
+   ],
    "source": [
     "c = 0\n",
     "while c <= 5:\n",
@@ -206,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -223,12 +229,7 @@
       "    1) Saludar\n",
       "    2) Sumar dos números\n",
       "    3) Salir\n",
-      "El resultado de la suma es: 24.0\n",
-      "¿Qué quieres hacer? Escribe una opción\n",
-      "    1) Saludar\n",
-      "    2) Sumar dos números\n",
-      "    3) Salir\n",
-      "Comando desconocido, vuelve a intentarlo\n",
+      "El resultado de la suma es: 9.0\n",
       "¿Qué quieres hacer? Escribe una opción\n",
       "    1) Saludar\n",
       "    2) Sumar dos números\n",
@@ -260,6 +261,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenido a la base de datos de AHK\n",
+      "¿Qué data desea obtener?\n",
+      "          1) Tonelaje recepcionado del mes\n",
+      "          2) Tonelaje consolidado del mes\n",
+      "          3) Tonelaje mezclado del mes\n",
+      "Número de camiones x tonelaje por camión\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Bienvenido a la base de datos de AHK\")\n",
+    "while True:\n",
+    "    print(\"\"\"¿Qué data desea obtener?\n",
+    "          1) Tonelaje recepcionado del mes\n",
+    "          2) Tonelaje consolidado del mes\n",
+    "          3) Tonelaje mezclado del mes\"\"\")\n",
+    "    alternativa = input()\n",
+    "    if alternativa == '1':\n",
+    "        print(\"Número de camiones x tonelaje por camión\")\n",
+    "        break\n",
+    "    elif alternativa == '2':\n",
+    "        print(\"Número de contenedores x tonelaje cargado\")\n",
+    "        break\n",
+    "    elif alternativa == '3' :\n",
+    "        print(\"Número de rumas y su tonelaje mezclado\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Hasta luego\")\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -272,39 +314,6 @@
    "source": [
     "1. Tenemos la pantalla del móvil bloqueada. Partiendo de un PIN_SECRETO, intentaremos desbloquear la pantalla. Tenemos hasta 3 intentos. Simula el proceso con Python. En caso de acceder, lanza al usuario 'login correcto'. Sino, 'llamando al policía'.\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "login incorrecto: vuelve a intentar   \n",
-      "2\n",
-      "login incorrecto: vuelve a intentar   \n",
-      "3\n",
-      "login correcto\n"
-     ]
-    }
-   ],
-   "source": [
-    "pin_secreto=\"a125\"\n",
-    "i=1\n",
-    "while i<=3:\n",
-    "    textodigitado=input(\"Digite la contraseña:\")\n",
-    "    if textodigitado==pin_secreto:\n",
-    "        print(\"login correcto\")\n",
-    "        break\n",
-    "    else:\n",
-    "        print(\"login incorrecto: vuelve a intentar   \")\n",
-    "    i=i+1\n",
-    "# \n",
-    "if i>3:\n",
-    "    print(\"   llamando policia...\")"
    ]
   },
   {
@@ -346,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "metadata": {}
    },
@@ -355,8 +364,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No se puede dividir por cero\n",
-      "Fin del programa\n"
+      "¿Qué operación deseas realizar?\n",
+      "        1) Raíz cuadrada de la suma de dos números\n",
+      "        2) División de A/B\n",
+      "        3) Multilplicación de ambos números sobre 2.5\n",
+      "        4) SAL\n",
+      "Operación no válida\n",
+      "¿Qué operación deseas realizar?\n",
+      "        1) Raíz cuadrada de la suma de dos números\n",
+      "        2) División de A/B\n",
+      "        3) Multilplicación de ambos números sobre 2.5\n",
+      "        4) SAL\n",
+      "Operación no válida\n",
+      "¿Qué operación deseas realizar?\n",
+      "        1) Raíz cuadrada de la suma de dos números\n",
+      "        2) División de A/B\n",
+      "        3) Multilplicación de ambos números sobre 2.5\n",
+      "        4) SAL\n",
+      "Adiós\n"
      ]
     }
    ],
@@ -416,6 +441,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola somos los múltiplos de 3 [3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45]\n",
+      "[5, 10, 15, 20, 25, 30, 35, 40, 45]\n",
+      "[15, 30, 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiplos_3 = []\n",
+    "multiplos_5 = []\n",
+    "multiplos_3y5 = []\n",
+    "\n",
+    "for i in range(1,46):\n",
+    "    if i % 3 == 0:\n",
+    "        multiplos_3.append(i)\n",
+    "print(\"Hola somos los múltiplos de 3\", multiplos_3)\n",
+    "\n",
+    "for i in range(1,46):\n",
+    "    if i % 5 == 0:\n",
+    "        multiplos_5.append(i)\n",
+    "print(multiplos_5)\n",
+    "\n",
+    "for i in range(1,46):\n",
+    "    if i % 5 == 0 and i % 3 == 0:\n",
+    "        multiplos_3y5.append(i)\n",
+    "print(multiplos_3y5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -434,6 +495,60 @@
     "- Mostrar una multiplicación de los dos números\n",
     "\n",
     "En caso de introducir una opción inválida, el programa informará de que no es correcta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenido\n",
+      "Qué operación realizará?\n",
+      "          1) Suma\n",
+      "          2) Resta\n",
+      "          3) Multiplicación\n",
+      "adios\n",
+      "Qué operación realizará?\n",
+      "          1) Suma\n",
+      "          2) Resta\n",
+      "          3) Multiplicación\n",
+      "El resultado es 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Bienvenido\")\n",
+    "while True:\n",
+    "    print(\"\"\"Qué operación realizará?\n",
+    "          1) Suma\n",
+    "          2) Resta\n",
+    "          3) Multiplicación\"\"\")\n",
+    "    operc = input()\n",
+    "    if operc == '1':\n",
+    "        num_A = float(input(\"Ingrese el primero número: \"))\n",
+    "        num_B = float(input(\"Ingrese el segundo número: \"))\n",
+    "        resultad = num_A + num_B\n",
+    "        print(f\"El resultado es {resultad}\")\n",
+    "        break\n",
+    "    elif operc == '2':\n",
+    "        num_A = float(input(\"Ingrese el primero número: \"))\n",
+    "        num_B = float(input(\"Ingrese el segundo número: \"))\n",
+    "        resultad = num_A - num_B\n",
+    "        print(f\"El resultado es {resultad}\")\n",
+    "        break\n",
+    "    elif operc == '3':\n",
+    "        num_A = float(input(\"Ingrese el primero número: \"))\n",
+    "        num_B = float(input(\"Ingrese el segundo número: \"))\n",
+    "        resultad = num_A * num_B\n",
+    "        print(f\"El resultado es {resultad}\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print('adios')\n",
+    "      "
    ]
   },
   {
@@ -464,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -488,27 +603,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 'Juan'), (1, 'Antonio'), (2, 'Pedro'), (3, 'Herminio')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[*enumerate(lista_nombres)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -555,20 +659,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Maria', 'Antonio', 'Pedro', 'Herminio', 'Maria']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# valor cambiado\n",
     "mi_lista"
@@ -649,34 +742,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H\n",
-      "l\n",
-      "a\n",
-      " \n",
-      "M\n",
-      "u\n",
-      "n\n",
-      "d\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Hxla Mundx'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sustituir las 'o' por las 'x'\n",
     "texto = 'Hola Mundo'\n",
@@ -819,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -877,44 +945,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 4, 6, 8, 10, 12, 14, 16, 18]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[*range(2, 20, 2)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[30, 28, 26, 24, 22, 20, 18, 16, 14, 12, 10, 8, 6, 4]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# [start, stop>\n",
     "\n",
-    "[*range(30, 2, -2)]"
+    "[*range(30, 0, -2)]"
    ]
   },
   {
@@ -948,106 +994,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 1. ingresar el valor de n, n es el numero de elementos a ingresar\n",
-    "n = int(input(\"Ingrese el valor de n: \"))\n",
-    "n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5.0, 7.0, 9.0, 10.0, 15.0]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 2. genero una lista vacia\n",
-    "listado_numeros = []\n",
-    "\n",
-    "# 3. ingreso los n elementos a mi lista mediante un bucle for\n",
-    "for i in range(n):\n",
-    "    x = float(input(f\"Ingrese el número {i+1}: \"))\n",
-    "    listado_numeros.append(x)\n",
-    "\n",
-    "listado_numeros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.2"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 4. Calcular media aritmetica\n",
-    "\n",
-    "# opcion 1\n",
-    "media_aritmetica = sum(listado_numeros) / n\n",
-    "media_aritmetica\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.2"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# opcion 2\n",
-    "\n",
-    "suma_numeros = 0\n",
-    "\n",
-    "for numero in listado_numeros:\n",
-    "    suma_numeros += numero\n",
-    "    \n",
-    "media_aritmetica = suma_numeros / n\n",
-    "\n",
-    "media_aritmetica\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1058,95 +1008,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "144"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 1. ingresar el valor de n por teclado\n",
-    "\n",
-    "numero = int(input(\"Ingrese un número: \"))\n",
-    "numero"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 6, 8, 9, 12, 16, 18, 24, 36, 48, 72, 144]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 2. identificar divisores del numero\n",
-    "listado_divisores = []\n",
-    "\n",
-    "# debo buscar los divisores del numero entre [1, numero]\n",
-    "for i in range(1, numero+1):\n",
-    "    # identifico si es divisor por media del modulo del numero\n",
-    "    if numero % i == 0:\n",
-    "        listado_divisores.append(i)\n",
-    "listado_divisores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "403"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 3. Calcular la suma de los divisores\n",
-    "sum(listado_divisores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "8%8"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1164,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,114 +1037,6 @@
     "##\n",
     "###\n",
     "####"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 1. ingresar el valor de n por teclado\n",
-    "n = int(input(\"Ingrese el valor de n: \"))\n",
-    "n\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#\n",
-      "##\n",
-      "###\n",
-      "####\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 2. genero un bucle desde 1, hasta n+1\n",
-    "for i in range(1, n+1):\n",
-    "    print(\"#\"*i)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'##'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'#'*2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola Mundo\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Hola', end=' ')\n",
-    "print('Mundo')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#\n",
-      "##\n",
-      "###\n",
-      "####\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(1, n+1):\n",
-    "    x = ''\n",
-    "    for j in range(1, i+1):\n",
-    "        #print('#', end='')\n",
-    "        x += '#'\n",
-    "    # print()\n",
-    "    print(x)"
    ]
   },
   {
