--- a/Modulo1/6. Colecciones de Datos.ipynb
+++ b/Modulo1/6. Colecciones de Datos.ipynb
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {
     "metadata": {}
    },
@@ -837,7 +837,7 @@
        "(100, 'Hola', [1, 2, 3], -50, ('mundo', 20))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {
     "metadata": {}
    },
@@ -861,7 +861,7 @@
        "tuple"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "metadata": {}
    },
@@ -902,21 +902,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Al ser inmutables, no podemos modificar los elementos de una tupla.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtupla\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Al ser inmutables, no podemos modificar los elementos de una tupla.\n",
     "tupla[1]=20"
@@ -962,89 +950,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tupla.count(100) # cuantas veces aparece el numero 100 en la tupla"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tupla.index(-50) # posicion de elemento en tupla"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 8, 3]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tupla[2] # tupla[n] -> n indica el indice o posicion del elemento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtupla\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# no podemos modificar los elementos de una tupla\n",
     "tupla[0]=5"
@@ -1073,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {
     "metadata": {}
    },
@@ -1086,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1038,7 @@
        "dict"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1115,6 +1058,7 @@
      "output_type": "stream",
      "text": [
       "Luis\n",
+      "30\n",
       "30\n"
      ]
     }
@@ -1122,7 +1066,8 @@
    "source": [
     "# Accediendo a los elementos de un diccionario, esto se hace a través de las claves.\n",
     "print(datos_persona[\"nombre\"])  # Luis\n",
-    "print(datos_persona.get(\"edad\"))  # 30\n"
+    "print(datos_persona.get(\"edad\"))  # 30\n",
+    "print(datos_persona[\"edad\"])"
    ]
   },
   {
@@ -1273,16 +1218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32"
+       "30"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "metadata": {
     "metadata": {}
    },
@@ -1394,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {
     "metadata": {}
    },
@@ -1405,7 +1350,7 @@
        "'Pedro'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {
     "metadata": {}
    },
@@ -1434,7 +1379,7 @@
        "[]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {
     "metadata": {}
    },
@@ -1461,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {
     "metadata": {}
    },
@@ -1476,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {
     "metadata": {}
    },
@@ -1536,10 +1481,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict_new = {\n",
+    "    \"jose\": \"Gerado\",\n",
+    "    \"Edad\": 25\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'jose': 'Gerado', 'Edad': 25, 'hobby': 'box'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_new[\"hobby\"]= \"box\"\n",
+    "print(dict_new)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1547,6 +1515,13 @@
    "source": [
     "2. Acceder al autor y modificar el año de publicación."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1585,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -1600,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -1616,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -1648,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -1660,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -1672,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -1687,66 +1662,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'vida': 4, 'ataque': 2, 'defensa': 4, 'alcance': 2}"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "caballero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'vida': 2, 'ataque': 4, 'defensa': 2, 'alcance': 4}"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "guerrero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'vida': 2, 'ataque': 4, 'defensa': 1.0, 'alcance': 4}"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "arquero"
    ]
