--- a/Modulo2/2. Funciones Python.ipynb
+++ b/Modulo2/2. Funciones Python.ipynb
@@ -707,49 +707,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "numero = int(input(\"Ingrese un número: \"))\n",
-    "\n",
-    "numero\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El numero es impar\n"
-     ]
-    }
-   ],
-   "source": [
-    "def verificar_numero_par(n):\n",
-    "    \n",
-    "    if n%2==0:\n",
-    "        print('EL numero es par')\n",
-    "    else:\n",
-    "        print('El numero es impar')\n",
-    "        \n",
-    "verificar_numero_par(numero)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -762,96 +723,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El área del triángulo es: 60.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "def calcular_area_triangulo(b, h):\n",
-    "    area_triangulo = b * h / 2\n",
-    "    return area_triangulo\n",
-    "\n",
-    "\n",
-    "base = int(input(\"Ingrese la base: \"))\n",
-    "altura = int(input(\"Ingrese la altura: \"))\n",
-    "\n",
-    "\n",
-    "area_triangulo = calcular_area_triangulo(base, altura)\n",
-    "\n",
-    "print(f\"El área del triángulo es: {area_triangulo}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.\n",
-    "Escribe un programa que identifique si un número es primo o no lo es:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17 es primo\n"
-     ]
-    }
-   ],
-   "source": [
-    "numero = 17\n",
-    "\n",
-    "es_primo = True\n",
-    "for i in range(2, numero):\n",
-    "    \n",
-    "    if numero % i == 0:\n",
-    "        es_primo = False\n",
-    "        break\n",
-    "    \n",
-    "if es_primo:\n",
-    "    print(f\"{numero} es primo\")\n",
-    "else:\n",
-    "    print(f\"{numero} no es primo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17 es primo\n"
-     ]
-    }
-   ],
-   "source": [
-    "def validar_numero_primo(numero):\n",
-    "    for i in range(2, numero):\n",
-    "        if numero % i == 0:\n",
-    "            return False\n",
-    "    return True\n",
-    "\n",
-    "numero = 17\n",
-    "if validar_numero_primo(numero):\n",
-    "    print(f\"{numero} es primo\")\n",
-    "else:\n",
-    "    print(f\"{numero} no es primo\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -863,10 +738,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1060\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def es_primo (n):\n",
+    "    if n <=1:\n",
+    "        return False \n",
+    "    for i in range(2, n):\n",
+    "        if n % i == 0: \n",
+    "            return False \n",
+    "    return True\n",
+    "\n",
+    "suma_primos = sum(n for n in range(2,100) if es_primo(n))\n",
+    "\n",
+    "print(f\"{suma_primos}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma de todos los números primos menores que 100 es: 1060\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_primo(n):\n",
+    "    if n <= 1:\n",
+    "        return False\n",
+    "    for i in range(2, int(n**0.5) + 1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "suma_primos = sum(n for n in range(2, 100) if es_primo(n))\n",
+    "\n",
+    "print(f\"La suma de todos los números primos menores que 100 es: {suma_primos}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
